--- a/css/all.css
+++ b/css/all.css
@@ -155,10 +155,12 @@ header {
   line-height: 1.5;
   background-color: rgba(238, 135, 33, 0.5);
   padding: 20px; }
-  #block2 .wrapper {
-    width: 100%;
-    position: relative;
-    margin: 0 auto; }
+  #block2 input[type="text"] {
+    padding: 10px; }
+  #block2 .button {
+    cursor: pointer;
+    padding: 10px;
+    width: 120px; }
 
 #block3 {
   position: relative;
