--- a/scss/partials/_block2.scss
+++ b/scss/partials/_block2.scss
@@ -3,9 +3,12 @@
 	line-height: 1.5;
 	background-color: $red;
 	padding: 20px;
-	.wrapper {
-		width: 100%;
-		position: relative;
-		margin: 0 auto;
-	}
+		input[type="text"] {
+			padding: 10px;
+		}
+		.button {
+			cursor: pointer;
+			padding: 10px;
+			width: 120px;
+		}
 }
