--- a/scss/partials/_block3.scss
+++ b/scss/partials/_block3.scss
@@ -3,9 +3,35 @@
 	line-height: 1.5;
 	background-color: $violet;
 	padding: 20px;
-	.wrapper {
-		width: 100%;
-		position: relative;
-		margin: 0 auto;
+	.calc {
+		margin: 10px 0;
+		border: 1px solid #000;
+		border-radius: 10px;
+		padding: 20px;
+		width: 35%;
+		div {
+			margin: 10px 0;
+			text-align: center;
+		}
+		label {
+			margin: 0 10px 0 0;
+		}
+		input[type=text] {
+			padding: 5px 10px;
+			border-radius: 5px;
+			border: 1px solid #000033;
+		}
+		.row {
+			height: 20px;
+			line-height: 15px;
+			vertical-align: middle;
+		
+			.button {
+				padding: 5px 10px;
+				font-size: 16px;
+				cursor: pointer;
+			}
+		}
+		
 	}
 }
